# swagger.json
@@ -361,6 +361,108 @@
                 }
             }
         },
+        "/mobile/auth/user/otp/confirm": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Verify the provided confirmation code and return a token if valid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Verify confirmation code",
+                "parameters": [
+                    {
+                        "description": "Code Details",
+                        "name": "banner",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ConfirmationReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/mobile/auth/user/otp/send": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Send a confirmation code to the provided email address",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Send confirmation code to email",
+                "parameters": [
+                    {
+                        "description": "Code Details",
+                        "name": "banner",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SendConfirmationCodeReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/mobile/banner": {
             "get": {
                 "security": [
@@ -1728,6 +1830,12 @@
                         "type": "string",
                         "description": "Phone number",
                         "name": "phone_number",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Email",
+                        "name": "email",
                         "in": "formData"
                     },
                     {
@@ -6778,7 +6886,6 @@
                     "type": "string"
                 },
                 "value": {
-                    "description": "activity (minut/sekund)",
                     "type": "integer"
                 }
             }
@@ -6830,9 +6937,17 @@
                 "app_version": {
                     "type": "object"
                 },
+                "buy_course": {
+                    "type": "boolean",
+                    "example": true
+                },
                 "call_center": {
                     "type": "string",
                     "example": "+998901234567"
+                },
+                "feedback_url": {
+                    "type": "string",
+                    "example": "https://t.me/feedback"
                 },
                 "payment_min_version": {
                     "type": "string",
@@ -6867,6 +6982,10 @@
                 "app_version": {
                     "type": "object"
                 },
+                "buy_course": {
+                    "type": "boolean",
+                    "example": true
+                },
                 "call_center": {
                     "type": "string",
                     "example": "+998901234567"
@@ -6874,6 +6993,10 @@
                 "created_at": {
                     "type": "string",
                     "example": "2026-02-10T10:00:00Z"
+                },
+                "feedback_url": {
+                    "type": "string",
+                    "example": "https://t.me/feedback"
                 },
                 "id": {
                     "type": "string",
@@ -6902,9 +7025,17 @@
                 "app_version": {
                     "type": "object"
                 },
+                "buy_course": {
+                    "type": "boolean",
+                    "example": true
+                },
                 "call_center": {
                     "type": "string",
                     "example": "+998901234567"
+                },
+                "feedback_url": {
+                    "type": "string",
+                    "example": "https://t.me/feedback"
                 },
                 "payment_min_version": {
                     "type": "string",
@@ -7083,6 +7214,21 @@
                 }
             }
         },
+        "models.ConfirmationReq": {
+            "type": "object",
+            "properties": {
+                "confirmation_code": {
+                    "type": "string"
+                },
+                "identifier": {
+                    "type": "string"
+                },
+                "type": {
+                    "description": "\"email\" or \"telegram\"",
+                    "type": "string"
+                }
+            }
+        },
         "models.ContactCreateReq": {
             "type": "object",
             "properties": {
@@ -7151,6 +7297,9 @@
         "models.CourseCreateBody": {
             "type": "object",
             "properties": {
+                "can_buy": {
+                    "type": "boolean"
+                },
                 "description": {
                     "type": "object",
                     "additionalProperties": {
@@ -7260,6 +7409,9 @@
         "models.CourseRes": {
             "type": "object",
             "properties": {
+                "can_buy": {
+                    "type": "boolean"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -7319,6 +7471,9 @@
         "models.CourseUpdateBody": {
             "type": "object",
             "properties": {
+                "can_buy": {
+                    "type": "boolean"
+                },
                 "description": {
                     "type": "object",
                     "additionalProperties": {
@@ -7357,16 +7512,46 @@
         "models.DashboardRes": {
             "type": "object",
             "properties": {
+                "active_promocodes": {
+                    "type": "integer"
+                },
+                "active_user_courses": {
+                    "type": "integer"
+                },
+                "active_users": {
+                    "type": "integer"
+                },
+                "admin_orders": {
+                    "type": "integer"
+                },
+                "cancelled_orders": {
+                    "type": "integer"
+                },
+                "click_orders": {
+                    "type": "integer"
+                },
                 "courses": {
                     "type": "integer"
                 },
+                "deleted_user_courses": {
+                    "type": "integer"
+                },
                 "documents": {
+                    "type": "integer"
+                },
+                "inactive_user_courses": {
                     "type": "integer"
                 },
                 "lessons": {
                     "type": "integer"
                 },
                 "modules": {
+                    "type": "integer"
+                },
+                "paid_orders": {
+                    "type": "integer"
+                },
+                "promocodes": {
                     "type": "integer"
                 },
                 "subjects": {
@@ -7379,6 +7564,9 @@
                     "type": "integer"
                 },
                 "tests": {
+                    "type": "integer"
+                },
+                "user_courses": {
                     "type": "integer"
                 },
                 "users": {
@@ -7742,6 +7930,9 @@
         "models.MobileCourseRes": {
             "type": "object",
             "properties": {
+                "can_buy": {
+                    "type": "boolean"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -7759,6 +7950,9 @@
                 },
                 "image_url": {
                     "type": "string"
+                },
+                "is_public": {
+                    "type": "boolean"
                 },
                 "lessons": {
                     "type": "integer"
@@ -8255,6 +8449,18 @@
                 }
             }
         },
+        "models.SendConfirmationCodeReq": {
+            "type": "object",
+            "properties": {
+                "identifier": {
+                    "type": "string"
+                },
+                "type": {
+                    "description": "\"email\" or \"telegram\"",
+                    "type": "string"
+                }
+            }
+        },
         "models.SourceCreateBody": {
             "type": "object",
             "properties": {
@@ -8486,6 +8692,9 @@
                 "order_num": {
                     "type": "integer"
                 },
+                "total_courses": {
+                    "type": "integer"
+                },
                 "updated_at": {
                     "type": "string"
                 }
@@ -8510,6 +8719,9 @@
                     }
                 },
                 "order_num": {
+                    "type": "integer"
+                },
+                "total_courses": {
                     "type": "integer"
                 },
                 "updated_at": {
@@ -8692,7 +8904,7 @@
         "models.UserCheckReq": {
             "type": "object",
             "properties": {
-                "phone_number": {
+                "identifier": {
                     "type": "string"
                 }
             }
@@ -8945,6 +9157,9 @@
             "type": "object",
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "email": {
                     "type": "string"
                 },
                 "fcm_token": {
